syntax = "proto3";

import "google/protobuf/empty.proto";
import "com/cinematica/backend/users/requests/IsUserExistRequest.proto";

option java_package = "com.cinematica.backend.authorization";

service UsersService {
  rpc isUserExist(IsUserExistRequest) returns (IsUserExistRequest.Response);
}